--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <section>
+            <article class="cartao">
+                <div class="cartao_conteudo">
+                    <h3>titulo</h3>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
