--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
                 <div class="cartao_conteudo">
                     <h3>titulo</h3>
                 </div>
+                <div class="cartao_conteudo_pergunta">
+                    <p>Quantos tipos relevos exitem no Brasil</p>
+                </div>
+                <div class="cartao_conteudo_resposta">
+                    <p>Três</p>
+                </div>
             </article>
         </section>
     </main>
