--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <h3>titulo</h3>
                 </div>
                 <div class="cartao_conteudo_pergunta">
-                    <div class="Quantas vezes rosamaria foi campea olimpica"</p>
+                    <div class="Quantas vezes rosamaria foi campea olimpica?"</p>
                 </div>
                 <div class="cartao_conteudo_resposta">
                     <p>Três</p>
