--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
                     <h3>titulo</h3>
                 </div>
                 <div class="cartao_conteudo_pergunta">
-                    <div class="Quantas vezes rosamaria foi campea olimpica?"</p>
-                </div>
-                <div class="cartao_conteudo_resposta">
-                    <p>Três</p>
+    
+                        <p>Quantos tipos relevos exitem no Brasil</p>
+                    </div>
+                    <div class="cartao_conteudo_resposta">
+                        <p>Três</p>
+                    </div>
                 </div>
             </article>
         </section>
